--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-status-codes": "^1.0.6",
     "mongodb": "^2.2.21",
     "passport": "^0.3.2",
+    "redis": "^2.6.5",
     "request": "^2.79.0",
     "winston": "^2.3.0",
     "winston-daily-rotate-file": "^1.4.3"
